# unicorn-lua

./: .busted  .clang-format  .editorconfig  .gitignore  .travis.yml  CHANGELOG.rst  CMakeLists.txt  COPYING  Doxyfile  LICENSE  LICENSE.txt  Makefile  Makefile.win  NOTICE.txt  README.md  README.rst  busted-config-template.lua  busted-runner-template.sh  cmake-defaults.cmake  common-recipes.mk  common-variables.mk  config.ld  configure  dependencies-src.d  dependencies-tests.d  profile.mk  python-requirements.txt  travis-setup.sh  unicorn-2.0.1-1.rockspec  unicorn-2.1.0-1.rockspec  unicorn-2.2.0-1.rockspec  unicorn-2.2.1-1.rockspec  unicorn-2.2.2-1.rockspec  unicorn-2.3.0-1.rockspec  unicorn-2.3.1-1.rockspec  xmake.lua
.github/workflows/: ci.yml
.travis/: init_lua.sh  init_unicorn.sh  set_up_unicorn.sh  setup_lua.sh
ci/: travis-install.sh  travis-run.sh  travis-setup.sh
cmake/: Doxyfile.in  install-lua.cmake  install-luajit.cmake  install-luarocks.cmake  makefile-variables.in
csrc/: basic_control_functions.template  basic_hook_functions.template  context.c  context.cpp  control_functions.c  engine.c  engine.cpp  errors.c  hooks.c  registers.template  registers_api.c  unicorn.c
csrc/OLD/: compat.cpp  control_functions.cpp  memory.cpp  registers_misc.cpp  transaction.cpp  unicorn.cpp
csrc/OLD/unicornlua/: control_functions.hpp  errors.hpp  memory.hpp  registers.hpp  transaction.hpp
csrc/template_data/: basic_control_functions.lua  basic_hook_functions.lua  predefined_docstrings.lua
csrc/unicornlua/: basic_hook_functions.template  context.h  control_functions.h  engine.h  hooks.h  integer_conversions.h  register_template_functions.hpp  register_types.template  registers.h  unicornlua.h  utils.h
docs/: Implementation.rst  README.rst  api.rst
docs/examples/: README.rst
docs/examples/cmos_time/: README.rst  cmos.lua  run.lua
docs/examples/disk_io/: diskio.lua  run.lua
docs/examples/vga_text/: README.rst  program.asm  vga.lua
examples/: README.rst
examples/cmos_time/: README.rst  program.asm  run.lua
examples/disk_io/: README.rst  program.asm  run.lua
examples/vga_text/: program.asm  run.lua
include/unicornlua/: common.h  compat.h  compat.hpp  context.h  context.hpp  control_functions.hpp  engine.h  engine.hpp  errors.h  errors.hpp  hooks.h  hooks.hpp  integer_conversions.hpp  lua.h  lua.hpp  memory.h  memory.hpp  numbers.h  register_template_functions.h  register_template_functions.hpp  register_types.template  registers.h  registers.hpp  transaction.hpp  unicornlua.h  unicornlua.hpp  utils.h  utils.hpp
include/unicornlua/constants/: arm.h  arm64.h  globals.h  m68k.h  mips.h  sparc.h  x86.h
rockspecs/: unicorn-2.2.1-1.rockspec
src/: CMakeLists.txt  arm.c  arm64.c  basic_control_functions.template  compat.c  compat.cpp  context.cpp  control_functions.cpp  engine.c  engine.cpp  errors.cpp  globals.c  globals.cpp  hooks.c  hooks.cpp  init.lua  m68k.c  memory.c  memory.cpp  mips.c  numbers.c  registers.c  registers.cpp  registers.template  registers.tpl  registers_const.cpp  registers_const.template  registers_misc.cpp  sparc.c  transaction.cpp  unicorn.c  unicorn.cpp  unicornlua.c  utils.c  utils.cpp  x86.c
src/constants/: arm.c  arm64.c  globals.c  m68k.c  mips.c  sparc.c  x86.c
src/template_data/: basic_control_functions.lua  register_types.lua
src/unicorn/: context.lua  engine.lua  hooks.lua  init.lua
src/unicornlua/: compat.hpp  engine.hpp  integer_conversions.hpp  lua.hpp  unicornlua.hpp
templates/: Makefile  Makefile-win.template  Makefile.in  arch_const_generator.template  arch_const_ldoc.template  busted-config.lua  busted-runner.sh  const_generator.c.template  platform.h  registers_const_generator.template
tests/c/: CMakeLists.txt  compat.cpp  context.cpp  engine.cpp  fixtures.cpp  fixtures.h  fixtures.hpp  hooks.cpp  main.cpp  registers.cpp  utils.cpp
tests/c_OLD/: context.cpp  engine.cpp  utils.cpp
tests/lua/: CMakeLists.txt  context.lua  context_spec.lua  hooks.lua  hooks_spec.lua  imports.lua  imports_spec.lua  integers.lua  memory.lua  memory_spec.lua  regions.lua  regions_spec.lua  registers.lua  registers_spec.lua  require_submodules.lua  require_unicorn.lua  signedness.lua  signedness_spec.lua  tutorial.lua  tutorial_spec.lua
tools/: gcc_predefs.ini  generate_constants.lua  generate_constants.py  getopt.lua  lua_settings.ini  lua_venv.py  luaenv.mk  process_header.lua  profile_lua.lua  render_template.lua
tools/ci/: Makefile  build-project.sh  install-unicorn-windows.py  install-unicorn.py  install-unicorn.sh
